--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,46 @@
 body {
-    margin-top: 40px ;
-    margin-right: 40px ;
-    margin-left: 40px ;
-    margin-bottom: 40px ;
+    background: lightblue;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+.page-header {
+    text-align: center;
+}
+h1{
+    margin:0;
+    padding:0;
+}
+h2{
+    margin: 0;
+    padding: 0;
+}
+.page-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px 20px;
+    flex-direction: column;
+}
+.info-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px 40px;
+    justify-content: center;
+}
+.personalInfo {
+    width: 760px;
+    background-color: #1256de;
+    border-radius: 30px;
+    padding: 0px 40px 20px;
 }
 p {
     font-size: 20px;
+}
+img {
+    width: 400px;
+    height: 300px;
+    border-radius: 30px;
+    object-fit: cover;
+}
+.links {
+    text-align: center;
 }
